    imposes less of a maintenance burden.
  * Restore grub-mkdevicemap for now.  While it's kind of a mess, requiring
    lots of OS-specific code to iterate over all possible devices, we use it
    in a number of scripts to discover devices and reimplementing those in
    terms of something else would be very complicated.

 -- Christian Perrier <bubulle@debian.org>  Sat, 02 Jun 2012 19:51:35 +0200

grub2 (1.99-22.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply upstream patches for hurd-i386:
    - Test inode number (Closes: #634799).
    - Disable zfs code on GNU/Hurd (Closes: #670069).
    - Add userland partition support (Closes: #670186).
  * Fix packages build without libfuse (Closes: #670189).

 -- Samuel Thibault <sthibault@debian.org>  Fri, 08 Jun 2012 01:19:00 +0200

grub2 (1.99-22) unstable; urgency=low

  [ Debconf translations ]
  * Khmer added (Khoem Sokhem)
  * Slovenian (Vanja Cvelbar).  Closes: #670616
  * Traditional Chinese (Vincent Chen).
  * Vietnamese (Hai Lang).
  * Marathi (Sampada Nakhare)
  * Finnish (Timo Jyrinki).  Closes: #673976
  * Latvian (Rūdolfs Mazurs).  Closes: #674697

  [ Colin Watson ]
  * Make apport hook compatible with Python 3.
  * Add upstream r3476 (fix memory leak in grub_disk_read_small) to
    4k_sectors.patch, otherwise the larger disk cache due to
    efi_disk_cache.patch can cause EFI systems to run out of memory.

 -- Colin Watson <cjwatson@debian.org>  Wed, 30 May 2012 10:38:40 +0100

grub2 (1.99-21) unstable; urgency=low

  * Backport from upstream:
    - Fix hook calling for unaligned segments (closes: #666992,
      LP: #972250).

 -- Colin Watson <cjwatson@debian.org>  Tue, 03 Apr 2012 14:19:18 +0100

grub2 (1.99-20) unstable; urgency=low

  * Backport kFreeBSD support from upstream to 4k_sectors.patch.

 -- Colin Watson <cjwatson@debian.org>  Mon, 02 Apr 2012 21:53:02 +0100

grub2 (1.99-19) unstable; urgency=low

  [ Colin Watson ]
  * Add grub-probe to grub-mount-udeb (LP: #963471).